# transcriber-ag

./: .gitignore  README.md  transcriber-ag_2.0.0.orig.tar.gz.delta  transcriber-ag_2.0.0.orig.tar.gz.id
libs/: CMakeLists.txt
libs/aglib-2.0.1/: CMakeLists.txt  LICENSE  Makefile.in  aclocal.m4  configure.in
libs/aglib-2.0.1/demo/: Makefile.am  Makefile.in  atis2wsj.sh
libs/aglib-2.0.1/doc/: Makefile.am  agdb.html  getting.html  install_bin.html  java_wrapper.html  python_wrapper.html
libs/aglib-2.0.1/doc/api/: classAGException-members.html  classAGSet-members.html  classAnchor-members.html  classAnchor.html  classAnchorCompFunc.html  classAnnotation-members.html  classAnnotation.html  classAnnotationIndex-members.html  classAnnotationIndex.html  classFeatureMap-members.html  classFeatureMap.html  classIdentifiers.html  classMetadata-members.html  classPaired-members.html  classPointerEqual.html  classRE-members.html  classRE_1_1CompError-members.html  classRE_1_1MatchError.html  classRecord_1_1RangeError.html  classStringPairEqual-members.html  classTimeline.html  classagfio-members.html  classagfio_1_1LoadError-members.html  classagfio_1_1StoreError.html  classagfio__plugin-members.html  classhashPointer.html  classhashStringPair.html  footer.html  interfaceAGAPI-members.html  interfaceAGAPI.html  main.html  tree.js
libs/aglib-2.0.1/scripts/: Makefile.am  README
libs/aglib-2.0.1/src/: CMakeLists.txt
libs/aglib-2.0.1/src/ag/: AGAPI.cc  AGDB.cc  Anchor.cc  AnnotationIndex.cc  CMakeLists.txt  Identifiers.cc  Makefile.in  Metadata.cc  Record.cc  Timeline.cc  ag_dlfcn.c  ag_dlfcn.h  agfio.cc  agfioError.cc  db.cc  regerror.c  tree_others.cc
libs/aglib-2.0.1/src/ag_wrapper/: Makefile.am  Makefile.in
libs/aglib-2.0.1/src/formats/: CMakeLists.txt  Makefile.in
libs/live555/: Makefile
libs/live555/liveMedia/: CMakeLists.txt
libs/live555/mediaServer/: DynamicRTSPServer.cpp
libs/live555/testProgs/: playCommon.cpp
libs/portaudio/: CMakeLists.txt
libs/soundtouch-1.4.0/: CMakeLists.txt  aclocal.m4
libs/soundtouch-1.4.0/include/: soundtouch_config.h
libs/soundtouch-1.4.0/source/: CMakeLists.txt
libs/soundtouch-1.4.0/source/SoundStretch/: Makefile.in
libs/soundtouch-1.4.0/source/SoundTouch/: CMakeLists.txt  FIRFilter.cpp  cpu_detect_x86_gcc.cpp
source/: AUTHORS  CMakeLists.txt  COPYING.txt  Doxyfile
source/cmake/: FindFFMPEG.cmake  FindTranslationTools.cmake
source/doc/admin/: transcriberAG_configuration_instructions.odt
source/doc/devel/: transcriberAG_build_instructions.odt  transcriberAG_localization_instructions.odt
source/doc/userman/html/: index.html
source/etc/TransAG/: AccelMap  AnchorLinks-1.0.dtd  Speakers-2.0.dtd  TransAG-1.0.dtd  TransAG-2.0.dtd  TransAG-3.0.dtd  configurationAG.dtd  configurationQualifiersAG.dtd  defaultSpeakerDictionary.xml  formatsAG.rc  languagesAG.xml  toolsAG.dtd  toolsAG.xml  transcriberAG.rc  transcriber_default.gtkrc  userAG.rc
source/etc/TransAG/conventions/: annotation_properties.rc  chat_import.rc  mono_h4_detailed.rc  qualifiers_detailed.rc  qualifiers_detailed_fre.rc  qualifiers_transag_ester.rc  topics.dtd  (+13 more)
source/include/: config.h.in  portabilite.h
source/libs/: CMakeLists.txt
source/libs/aglib-2.0.1/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README-CMAKE-BT  README-PATCH-BT  configure
source/libs/live555/: CMakeLists.txt  Makefile  README-CMAKE-BT  config.linux
source/libs/portaudio/: README-CMAKE-BT
source/libs/soundtouch-1.4.0/: README-CMAKE-BT  README-PATCH-BT  configure
source/po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  TranscriberAG.po  bo.po  fr.po
source/src/: CMakeLists.txt
source/src/AudioWidget/: AudioEqualizerControlWidget.cpp  AudioEqualizerControlWidget.h  AudioPitchControlWidget.h  AudioPlayControlWidget.cpp  AudioPlayControlWidget.h  AudioSignalView.cpp  AudioSignalView.h  AudioSoundTouchControlWidget.cpp  AudioSoundTouchControlWidget.h  AudioSpeedControlWidget.h  AudioTempoControlWidget.h  AudioTrackWidget.cpp  AudioTrackWidget.h  AudioVZoomControlWidget.cpp  AudioVZoomControlWidget.h  AudioVolumeControlWidget.cpp  AudioVolumeControlWidget.h  AudioWaveformWidget.cpp  AudioWaveformWidget.h  AudioWidget.cpp  AudioWidget.h  AudioZoomControlWidget.cpp  AudioZoomControlWidget.h  CMakeLists.txt  MarkTrackWidget.cpp  MarkTrackWidget.h  MarkWidget.cpp  MarkWidget.h  ScaleTrackWidget.cpp  ScaleTrackWidget.h  ScaleWidget.cpp  ScaleWidget.h  SegmentTooltip.cpp  SegmentTooltip.h  SegmentTrackWidget.cpp  SegmentTrackWidget.h  SegmentWidget.cpp  SegmentWidget.h  TrackWidget.h
source/src/Common/: CMakeLists.txt  ColorsCfg.h  CommonXMLReader.cpp  CommonXMLReader.h  Dialogs.cpp  Dialogs.h  Encoding.cpp  Encoding.h  Exceptions.h  Explorer_filter.cpp  Explorer_filter.h  Explorer_utils.cpp  Explorer_utils.h  FileInfo.cpp  FileInfo.h  Formats.cpp  Formats.h  InputLanguage.cpp  InputLanguage.h  InputLanguageArabic.cpp  InputLanguageArabic.h  InputLanguageHandler.cpp  InputLanguageHandler.h  Languages.cpp  Languages.h  PangoMarkup.h  Parameters.cpp  Parameters.h  ResultSet.cpp  ResultSet.h  VersionInfo.cpp  VersionInfo.h  globals.h  globdef.h  iso639.cpp  iso639.h  portabilite.h  tdef.cc  tread.cpp  tstr.cc  (+1 more)
source/src/DataModel/: CMakeLists.txt  DataModel.cpp  DataModel.h  DataModelMerge.cpp  DataModelMerge.h  DataModel_CPHelper.cpp  DataModel_CPHelper.h  DataModel_Cfg.cpp  DataModel_IO.cpp  DataModel_IOHelper.h  DataModel_StatHelper.cpp  DataModel_StatHelper.h  Doxyfile  TransAG-1.0.dtd  UndoableDataModel.cpp  UndoableDataModel.h
source/src/Editors/: CMakeLists.txt
source/src/Formats/: CMakeLists.txt
source/src/GUI/: CMakeLists.txt  GuiWidget.cpp  GuiWidget.h  main.cpp  msgErr.cpp  transag_icon.rc
source/src/MediaComponent/: CMakeLists.txt
source/src/Tools/: CMakeLists.txt  ExtractSpeakerSegments.cpp  add_section.cpp  add_translate_graph.cpp  clean_tag.cpp  convert_tag.cpp  merge_tag.cpp  print_spk.cpp  printtag.cpp  tagstats.cpp  testag.cpp  trs2tag.cpp  txt2tag.cpp
source/src/VideoComponent/: CMakeLists.txt  VideoManager.cpp  VideoManager.h
(+791 files in other folders)
